Fixed show-more overflow issue and added example local env file

--- a/django_app/frontend/src/chat-styles.scss
+++ b/django_app/frontend/src/chat-styles.scss
@@ -830,6 +830,7 @@ margin-bottom: 16px;
   top: 111px;
   bottom: 0;
   z-index: 100;
+  overflow-y: clip;
 }
 
 .side-panel-scrollable {
